fix: overflowing content

--- a/src/components/connectWithUs/connect.module.css
+++ b/src/components/connectWithUs/connect.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     background-color: #FFF;
     position: relative;
+    overflow: hidden;
 }
 
 .title {
